@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SED "1" "February 2013" "sed 4.2.2" "User Commands"
+.TH SED "1" "October 2013" "sed 4.2.2" "User Commands"
 .SH NAME
 sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
@@ -48,9 +48,10 @@ specify the desired line-wrap length for the `l' command
 .IP
 disable all GNU extensions.
 .HP
-\fB\-r\fR, \fB\-\-regexp\-extended\fR
+\fB\-E\fR, \fB\-r\fR, \fB\-\-regexp\-extended\fR
 .IP
-use extended regular expressions in the script.
+use extended regular expressions in the script
+(for portability use POSIX \fB\-E\fR).
 .HP
 \fB\-s\fR, \fB\-\-separate\fR
 .IP
@@ -367,6 +368,9 @@ and similarly for
 .BR \ea ,
 .BR \et ,
 and other sequences.
+The \fI-E\fP option switches to using extended regular expressions instead;
+the -E option has been supported for years by GNU sed, and is now
+included in POSIX.
 .SH BUGS
 .PP
 E-mail bug reports to
